# brightsign-npu-voice-extension

./: CMakeLists.txt  README.md  bsext_init
.github/workflows/: build-extension.yml
bsoe-recipes/meta-bs/recipes-open/brightsign-sdk/: brightsign-sdk.bb
bsoe-recipes/meta-bs/recipes-open/fftw/: fftw.bb
bsoe-recipes/meta-bs/recipes-open/libfvad/: libfvad.bb
bsoe-recipes/meta-bs/recipes-open/libfvad/libfvad/: 0001-install-static-lib.patch
bsoe-recipes/meta-bs/recipes-open/libsndfile/: libsndfile.bb
docs/: DESIGN.md
include/: asr.h  attention.h  inference.h  process.h  publisher.h  retinaface.h  whisper.h
scripts/: run_gha.sh  runall.sh
sh/: make-extension-lvm  uninstall.sh
src/: asr.cpp  attention.cpp  audio_utils.c  inference.cpp  main.cpp  process.cc  publisher.cpp  retinaface.cc  whisper.cc
